logs/validate.20260408-081319.log
Mode: isolate
Isolate: including Chap37 Chap18 Chap19 Chap23 Chap02
error: unexpected token, expected `;`
   --> src/Chap37/BSTSplayStEph.rs:605:29
    |
605 | ...                   by {
    |                       ^^

error[E0425]: cannot find type `Node` in this scope
    --> src/Chap37/BSTSplayStEph.rs:1754:61
     |
1754 |     impl<T: TotalOrder + Clone + fmt::Debug> fmt::Debug for Node<T> {
     |                                                             ^^^^ not found in this scope
     |
help: consider importing one of these structs
     |
  31 +     use crate::Chap37::AVLTreeSeqMtPer::AVLTreeSeqMtPer::Node;
     |
  31 +     use crate::Chap37::AVLTreeSeqStPer::AVLTreeSeqStPer::Node;
     |
  31 +     use crate::Chap37::BSTRBMtEph::BSTRBMtEph::Node;
     |
  31 +     use crate::Chap37::BSTSplayMtEph::BSTSplayMtEph::Node;
     |

error[E0405]: cannot find trait `TotalOrder` in this scope
    --> src/Chap37/BSTSplayStEph.rs:1754:13
     |
1754 |     impl<T: TotalOrder + Clone + fmt::Debug> fmt::Debug for Node<T> {
     |             ^^^^^^^^^^ not found in this scope
     |
help: consider importing this trait
     |
  31 +     use crate::vstdplus::total_order::total_order::TotalOrder;
     |

error[E0425]: cannot find type `Node` in this scope
    --> src/Chap37/BSTSplayStEph.rs:1765:65
     |
1765 |     impl<T: TotalOrder + Clone + fmt::Display> fmt::Display for Node<T> {
     |                                                                 ^^^^ not found in this scope
     |
help: consider importing one of these structs
     |
  31 +     use crate::Chap37::AVLTreeSeqMtPer::AVLTreeSeqMtPer::Node;
     |
  31 +     use crate::Chap37::AVLTreeSeqStPer::AVLTreeSeqStPer::Node;
     |
  31 +     use crate::Chap37::BSTRBMtEph::BSTRBMtEph::Node;
     |
  31 +     use crate::Chap37::BSTSplayMtEph::BSTSplayMtEph::Node;
     |

error[E0405]: cannot find trait `TotalOrder` in this scope
    --> src/Chap37/BSTSplayStEph.rs:1765:13
     |
1765 |     impl<T: TotalOrder + Clone + fmt::Display> fmt::Display for Node<T> {
     |             ^^^^^^^^^^ not found in this scope
     |
help: consider importing this trait
     |
  31 +     use crate::vstdplus::total_order::total_order::TotalOrder;
     |

error[E0425]: cannot find type `BSTSplayStEph` in this scope
    --> src/Chap37/BSTSplayStEph.rs:1773:61
     |
1773 |     impl<T: TotalOrder + Clone + fmt::Debug> fmt::Debug for BSTSplayStEph<T> {
     |                                                             ^^^^^^^^^^^^^ not found in this scope

error[E0405]: cannot find trait `TotalOrder` in this scope
    --> src/Chap37/BSTSplayStEph.rs:1773:13
     |
1773 |     impl<T: TotalOrder + Clone + fmt::Debug> fmt::Debug for BSTSplayStEph<T> {
     |             ^^^^^^^^^^ not found in this scope
     |
help: consider importing this trait
     |
  31 +     use crate::vstdplus::total_order::total_order::TotalOrder;
     |

error[E0425]: cannot find type `BSTSplayStEph` in this scope
    --> src/Chap37/BSTSplayStEph.rs:1779:50
     |
1779 |     impl<T: TotalOrder + Clone> fmt::Display for BSTSplayStEph<T> {
     |                                                  ^^^^^^^^^^^^^ not found in this scope

error[E0405]: cannot find trait `TotalOrder` in this scope
    --> src/Chap37/BSTSplayStEph.rs:1779:13
     |
1779 |     impl<T: TotalOrder + Clone> fmt::Display for BSTSplayStEph<T> {
     |             ^^^^^^^^^^ not found in this scope
     |
help: consider importing this trait
     |
  31 +     use crate::vstdplus::total_order::total_order::TotalOrder;
     |

error: aborting due to 9 previous errors

Some errors have detailed explanations: E0405, E0425.
For more information about an error, try `rustc --explain E0405`.
Elapsed: 4s
Sampled Memory Usage: peak rust_verify RSS: 5134MB, peak z3 RSS: 726MB, min free: 20161MB
Sampled CPU Usage: rust_verify: 63s, z3 children: 4s
